[gd_scene load_steps=14 format=3 uid="uid://dogry21xs8ue4"]

[ext_resource type="Shader" uid="uid://b8s1f03pckj5x" path="res://scripts/flashlight_mask.gdshader" id="1_w0pdm"]
[ext_resource type="Texture2D" uid="uid://o6a62rskm5s4" path="res://assets/temp/room_views/kids_bedroom.png" id="2_fp6uf"]
[ext_resource type="PackedScene" uid="uid://bwumcsru8q88u" path="res://scenes/clicker_button.tscn" id="3_aef17"]
[ext_resource type="Script" uid="uid://bmdosmpu2ei72" path="res://scripts/room_scripts/kids_bedroom_script.gd" id="3_armno"]
[ext_resource type="FontFile" uid="uid://dy5663vj1t44k" path="res://assets/fonts/PixelifySans-Bold.ttf" id="4_0s0ly"]
[ext_resource type="Shader" uid="uid://djavp7slx4gsn" path="res://scripts/flashlight_mask_spooky.gdshader" id="5_fp6uf"]
[ext_resource type="Texture2D" uid="uid://btv7ueixt06xk" path="res://assets/temp/color_conversion_input/shadow_ghost.png" id="6_fp6uf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0cpwa"]
shader = ExtResource("1_w0pdm")
shader_parameter/flashlight_distance = 100.0
shader_parameter/dark_color = Vector4(0, 0.016, 0.071, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_armno"]
shader = ExtResource("5_fp6uf")
shader_parameter/flashlight_distance = 100.0
shader_parameter/dark_color = Vector4(0, 0.016, 0.071, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0cpwa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ex3ef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivimn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q23t2"]

[node name="roomTexture" type="TextureRect"]
material = SubResource("ShaderMaterial_0cpwa")
texture = ExtResource("2_fp6uf")
expand_mode = 1
script = ExtResource("3_armno")
metadata/_edit_lock_ = true

[node name="roomButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="grabberButton" parent="roomButtons" instance=ExtResource("3_aef17")]
layout_mode = 0
offset_left = 837.0
offset_top = 229.0
offset_right = 902.0
offset_bottom = 332.0
hover_text = "Take grabber"
button_id = "take_grabber"

[node name="teddyButton" parent="roomButtons" instance=ExtResource("3_aef17")]
layout_mode = 0
offset_left = 378.0
offset_top = 141.0
offset_right = 433.0
offset_bottom = 193.0
hover_text = "Look at teddybear"
button_id = "look_teddybear"

[node name="toyButton" parent="roomButtons" instance=ExtResource("3_aef17")]
layout_mode = 0
offset_left = 608.0
offset_top = 309.0
offset_right = 784.0
offset_bottom = 430.0
hover_text = "Look at toys"
button_id = "look_toys"

[node name="lampButton" parent="roomButtons" instance=ExtResource("3_aef17")]
layout_mode = 0
offset_left = 103.0
offset_top = 203.0
offset_right = 224.0
offset_bottom = 347.0
hover_text = "Look at lamp"
button_id = "look_kids_lamp"

[node name="bedButton" parent="roomButtons" instance=ExtResource("3_aef17")]
layout_mode = 0
offset_left = 246.77681
offset_top = 194.04338
offset_right = 583.05896
offset_bottom = 318.71893
rotation = 0.39905378
hover_text = "Look at bed"
button_id = "look_kids_bed"

[node name="spookyGuy" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_armno")
layout_mode = 0
offset_left = -44.0
offset_top = -14.0
offset_right = 155.99976
offset_bottom = 203.0
texture = ExtResource("6_fp6uf")
expand_mode = 1
stretch_mode = 5

[node name="backButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 105.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.8509804, 0.7254902, 0.50980395, 1)
theme_override_colors/font_outline_color = Color(0, 0.015686275, 0.07058824, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_0s0ly")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_0cpwa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ex3ef")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ivimn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q23t2")
text = "BACK"
flat = true
